# CaseAI

./: BUILD_API_EXE_WINDOWS.ps1  BUILD_BACKEND_EXE_WINDOWS.ps1  BUILD_MSI_WINDOWS.ps1  INSTALL_AND_START_WINDOWS.bat  README.md
.github/workflows/: windows-build.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/desktop/src/: vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: Icons.icns  icon
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/ui/: App.tsx  api.ts
scripts/: run_dev_mac_linux.sh  run_dev_windows.ps1
services/local_api/: lcai_api.spec  requirements.txt
services/local_api/app/: main.py
